samples/_failures_safe/1761373015_23c1b0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e883fef.c: In function ‘main’:
./samples/SAFE/__tmp_3e883fef.c:166:5: error: expected declaration or statement at end of input
  166 |     if (fgets(input_buffer, sizeof(input_buffer), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_3e883fef.c:166:5: error: expected declaration or statement at end of input
